--- a/html/index.html
+++ b/html/index.html
@@ -14,8 +14,8 @@
             <div class="logo"></div>
         </div>
         <h1 class="title">Bem vindo ao Clube de Robótica da Universidade de Coimbra</h1>
-        <h1 class="subtitle">Estamos a melhorar o teu clube favorito, fica atento a novidades!</h1>
-        <h1 class="contact">Podes entrar em contato conosco através do nosso email:</h1>
+        <h1 class="subtitle">Estamos a preparar o teu clube favorito, fica atento a novidades!</h1>
+        <h1 class="contact">Podes entrar em contacto connosco através do nosso e-mail:</h1>
         <h1 class="email">clrobotica@deec.uc.pt</h1>
     </div>
 </body>
